src/d08/snapshots/aoc2023__d08__help__t__parse-2.snap
---
source: src/d08/help.rs
expression: parse_map(MAP_2.trim())
---
Map {
    dir: "LLR",
    map: {
        "BBB": (
            "AAA",
            "ZZZ",
        ),
        "ZZZ": (
            "ZZZ",
            "ZZZ",
        ),
        "AAA": (
            "BBB",
            "BBB",
        ),
    },
}
