src/d08/snapshots/aoc2023__d08__help__t__parse.snap
---
source: src/d08/help.rs
expression: parse_map(MAP_1.trim())
---
Map {
    dir: "RL",
    map: {
        "AAA": (
            "BBB",
            "CCC",
        ),
        "BBB": (
            "DDD",
            "EEE",
        ),
        "CCC": (
            "ZZZ",
            "GGG",
        ),
        "GGG": (
            "GGG",
            "GGG",
        ),
        "ZZZ": (
            "ZZZ",
            "ZZZ",
        ),
        "EEE": (
            "EEE",
            "EEE",
        ),
        "DDD": (
            "DDD",
            "DDD",
        ),
    },
}
